# Plantai

./: README.md  pyproject.toml
Flask/: app.py  model.py  requirements.txt  utils.py
Flask/templates/: index.html
src/: Plant Disease Identification.ipynb  index.css
